# odex

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
benchmarks/: comparisons.ipynb
odex/: __init__.py  condition.py  container.py  context.py  index.py  optimize.py  parse.py  plan.py  set.py  utils.py
tests/: test_docs.py  test_set.py
tests/fixtures/: e2e.yaml
